--- a/src/components/Friends/FriendListItem/FriendListItem.module.css
+++ b/src/components/Friends/FriendListItem/FriendListItem.module.css
@@ -1,5 +1,14 @@
 .friendItem {
     display: flex;
     align-items: center;
-    
+    padding: 8px;
+    width: 200px;
+    margin-bottom: 8px;
+    box-shadow: rgb(0 0 0 / 12%) 0px 1px 1px, rgb(0 0 0 / 6%) 0px 4px 4px, rgb(0 0 0 / 16%) 1px 4px 6px;
+    border-radius: 4px;
+}
+
+.friendName {
+    font-weight: 700;
+    margin-left: 10px;
 }
