--- a/src/components/Statistics/Stat/Stat.module.css
+++ b/src/components/Statistics/Stat/Stat.module.css
@@ -1,4 +1,8 @@
 .statItem {
     display: flex;
     flex-direction: column;
+    width: calc(25%);
+    padding: 8px;
+    border-bottom: 1px solid;
+    border-right: 1px solid;
 }
