--- a/src/components/Statistics/Title/StatisticsTitle.module.css
+++ b/src/components/Statistics/Title/StatisticsTitle.module.css
@@ -1,7 +1,11 @@
+.sectionTitle {
+    background-color: rgb(130, 132, 135);
+}
+
 .statisticsTitle {
     padding-top: 32px;
-        padding-bottom: 32px;
-        text-align: center;
-        text-transform: uppercase;
-        border-bottom: 1px solid;
+    padding-bottom: 32px;
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 1px solid;
 }
