--- a/src/components/Statistics/Title/StatisticsTitle.module.css
+++ b/src/components/Statistics/Title/StatisticsTitle.module.css
@@ -1,5 +1,7 @@
 .sectionTitle {
-    background-color: rgb(130, 132, 135);
+    background-color: white;
+    box-shadow: rgb(0 0 0 / 12%) 0px 1px 1px, rgb(0 0 0 / 6%) 0px 4px 4px, rgb(0 0 0 / 16%) 1px 4px 6px;
+    border-radius: 4px;
 }
 
 .statisticsTitle {
