--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,5 +1,7 @@
 .profile {
     background-color: white;
+    box-shadow: rgb(0 0 0 / 12%) 0px 1px 1px, rgb(0 0 0 / 6%) 0px 4px 4px, rgb(0 0 0 / 16%) 1px 4px 6px;
+        border-radius: 4px;
     width: 250px;
     border: 1px solid grey;
 }
@@ -39,6 +41,9 @@ display: block;
 .stats {
     display: flex;
     justify-content: space-between;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    
 }
 
 .stat {
@@ -50,7 +55,7 @@ display: block;
     border-left: 1px solid;
     padding: 16px;
     flex-basis: calc((100% - 0px) / 3);
-    background-color: white;
+    background-color: rgb(224, 211, 211);
 }
 
 .label {
