--- a/src/components/Statistics/Title/StatisticsTitle.module.css
+++ b/src/components/Statistics/Title/StatisticsTitle.module.css
@@ -1,13 +1,14 @@
 .sectionTitle {
-    background-color: white;
-    box-shadow: rgb(0 0 0 / 12%) 0px 1px 1px, rgb(0 0 0 / 6%) 0px 4px 4px, rgb(0 0 0 / 16%) 1px 4px 6px;
-    border-radius: 4px;
+  background-color: white;
+  box-shadow: rgb(0 0 0 / 12%) 0px 1px 1px, rgb(0 0 0 / 6%) 0px 4px 4px,
+    rgb(0 0 0 / 16%) 1px 4px 6px;
+  border-radius: 4px;
 }
 
 .statisticsTitle {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    text-align: center;
-    text-transform: uppercase;
-    border-bottom: 1px solid;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid;
 }
